[tool.poetry]
name = "katwarn-api"
version = "0.1.0"
description = "Python API Client for KATWARN"
license = "MIT"
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
readme = "README.md"
packages = [
    { include = "katwarn_api" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.4"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.8"
flake8 = "^7.0.0"
requests-mock = "^1.11.0"
pytest = "^8.0.1"

[tool.poetry.group.folium]
optional = true

[tool.poetry.group.folium.dependencies]
folium = "^0.14.0"
requests-mock = "^1.11.0"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
